@@ -1,3 +1,8 @@
+2008-02-26  Ross Burton  <ross@burtonini.com>
+
+	* src/bacon-volume.c:
+	Remove deprecated calls (#518753, thanks Michael Terry).
+
 2008-02-25  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-prefs.c:
